[project]
name = "harvest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.22",
    "confluent-kafka>=2.11.1",
    "newspaper3k>=0.2.8",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "tweepy>=4.16.0",
    "lxml-html-clean>=0.4.2",
    "feedparser>=6.0.11",
    "requests>=2.32.5",
    "pytest>=8.4.2",
]
